# repo_v0

./: .dockerignore  .env  Dockerfile.allinone  README copy.md  README.md  Taskfile.yaml  docker-compose.allinone.yml  docker-compose.yml
docs/: README.md  docker-compose-allinone.md  docker-compose-multi.md  docker-images.md  environment-reference.md  helm-allinone.md  helm-multi.md
helm/: Chart.yaml  values.yaml
helm-allinone/: Chart.yaml  values.yaml
scl-api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
scl-api/alembic/: env.py
scl-api/alembic/versions/: 20260413_102556_3766cd42102f_create_admission_requests_table.py  20260413_120000_add_class_admission_fields.py  20260413_140000_add_soft_delete_fields.py  20260413_150000_create_marks_and_class_history.py  20260413_160000_create_question_papers.py  20260413_170000_add_content_blocks_to_question_papers.py  20260413_180000_create_exams_tables.py  20260414_100000_create_student_results.py
scl-api/app/: __init__.py  main.py
scl-api/app/api/v1/: router.py
scl-api/app/api/v1/endpoints/: admissions.py  auth.py  config.py  exams.py  question_papers.py  results.py  students.py
scl-api/app/core/: __init__.py  config.py  security.py
scl-api/app/db/: __init__.py  base.py  models.py  session.py
scl-api/app/schemas/: admission.py  auth.py  config.py  exam.py  question_paper.py  result.py  student.py
scl-api/app/services/: admission_service.py  exam_service.py  pdf_service.py  question_paper_service.py  rag_service.py  result_service.py  student_service.py  supabase_auth_service.py  user_service.py
scl-frontend/: .env.example  .gitignore  (+8 more)
scl-rag/: .dockerignore  .env  Dockerfile  README.md  pyproject.toml
scl-rag/app/: __init__.py  main.py  schemas.py
scl-rag/app/api/: routes.py
scl-rag/app/core/: __init__.py
scl-rag/app/services/: analytics.py  indexing.py  query.py  vectordb.py
scl-rag/scl_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scl-rag/scripts/: docker-compose.milvus.yml
(+68 files in other folders)
